# invoice-llm-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: ci.yml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/docker/grafana/provisioning/dashboards/: dashboards.yml  llm-agent.json
deployment/docker/grafana/provisioning/datasources/: datasources.yml
deployment/docker/prometheus/: prometheus.yml
docs/design/: agent_architecture.md
scripts/: lint.sh  test.sh
src/: main.py
src/agent/core/: __init__.py  agent_function.py  exceptions.py  types.py
src/agent/functions/: __init__.py  base.py  calculate.py  registry.py
src/api/system/: router.py
src/api/v1/: exceptions.py  models.py  router.py
src/api/v1/routes/: agent.py
src/core/: config.py  exceptions.py  logging.py  metrics.py  middleware.py  types.py
src/services/: redis.py
src/services/llm/: base.py  openai.py
tests/: README.md  conftest.py
tests/agent/functions/: test_registry.py
tests/api/: agent.http  system.http
tests/api/v1/routes/: test_agent.py
tests/helpers/: assertions.py  mock_data.py
tests/integration/api/v1/: test_agent.py  test_agent_errors.py  test_agent_streaming.py
tests/services/llm/: test_openai.py
