[tool.poetry]
name = "invoice-llm-agent"
version = "0.1.0"
description = "LLM Agent for invoice processing"
authors = ["JeongJaeSoon <94jaesoon.jeong@gmail.com>"]
license = "Apache 2.0 License"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
python-multipart = "^0.0.6"
sse-starlette = "^1.8.2"
httpx = "^0.26.0"
openai = "^1.12.0"
PyPDF2 = "^3.0.1"
pdfplumber = "^0.10.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = "^2.6.1"
python-dotenv = "^1.0.1"
tenacity = "^8.2.3"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
pydantic-settings = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
ruff = "^0.2.1"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
